--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
 
   <link ios-href="build/css/app.ios.css" rel="stylesheet">
   <link md-href="build/css/app.md.css" rel="stylesheet">
-  <link wp-href="build/css/app.wp.css" rel="stylesheet">  
+  <link wp-href="build/css/app.wp.css" rel="stylesheet">
 </head>
 <body>
 
@@ -17,10 +17,15 @@
   <ion-app></ion-app>
 
   <!-- cordova.js required for cordova apps -->
+  <script src="lib/ngCordova/dist/ng-cordova.js"></script>
   <script src="cordova.js"></script>
   <!-- Zone.js and Reflect-metadata  -->
   <script src="build/js/angular2-polyfills.js"></script>
   <!-- the bundle which is built from the app's source code -->
   <script src="build/js/app.bundle.js"></script>
+  <!-- google maps API  -->
+  <script src="js/app.js"></script>
+  <script src="http://maps.google.com/maps/api/js?key=YOUR_API_KEY_GOES_HERE&sensor=true"></script>
+
 </body>
 </html>
