--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,13 @@
   <link md-href="build/css/app.md.css" rel="stylesheet">
   <link wp-href="build/css/app.wp.css" rel="stylesheet">
 </head>
-<body>
+<body ng-app="starter">
+  <ion-pane>
+    <ion-header-bar class="bar-stable">
+      <h1 class="title">Ionic Maps</h1>
+    </ion-header-bar>
+    <ion-nav-view></ion-nav-view>
+  </ion-pane>
 
   <!-- this Ionic's root component and where the app will load -->
   <ion-app></ion-app>
