--- a/ionic-tagr/www/index.html
+++ b/ionic-tagr/www/index.html
@@ -17,18 +17,19 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <!-- google API -->
+    <script src="http://maps.google.com/maps/api/js?key=YOUR_API_KEY_GOES_HERE&sensor=true"></script>
   </head>
   <body ng-app="starter">
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+     <ion-pane>
+    <ion-header-bar class="bar-stable">
+      <h1 class="title">Ionic Maps</h1>
+    </ion-header-bar>
+    <ion-nav-view></ion-nav-view>
+  </ion-pane>
   </body>
 </html>
