--- a/ionic-tagr/www/index.html
+++ b/ionic-tagr/www/index.html
@@ -18,7 +18,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="http://maps.google.com/maps/api/js?key=AIzaSyDvArafMh79VPpnt1yDJfnYfPu2ICiPyps">
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyDvArafMh79VPpnt1yDJfnYfPu2ICiPyps"></script>
   </head>
   <body ng-app="starter">
     <ion-pane>
