working on API issues3

--- a/ionic-tagr/www/map/map.html
+++ b/ionic-tagr/www/map/map.html
@@ -1,1 +1,13 @@
-map.html
+<ion-navbar *navbar>
+    <ion-title>
+      Map page
+    </ion-title>
+    <ion-nav-items secondary>
+      <button (click)="addmarker()"><icon add></icon> Add Marker</button>
+
+    <ion-nav-items>
+  </ion-navbar>
+
+  <ion-content>
+      <div id="map"></div>
+  </ion-content>
